--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,15 @@ services:
     volumes:
       - "${LAB_STORAGE:?err}/config/homeassistant:/conf"
       - "/etc/localtime:/etc/localtime:ro"
+    deploy:
+      placement:
+        constraints: [node.role == worker]
   hass:
     image: homeassistant/home-assistant:latest
     restart: unless-stopped
     network_mode: "host"
+    # ports:
+    #   - "8123:8123"
     environment:
       TZ: "${LAB_TZ:-America/Los_Angeles}"
       PUID: "1001"
@@ -23,6 +28,65 @@ services:
     volumes:
       - "${LAB_STORAGE:?err}/config/homeassistant:/config"
       - "/etc/localtime:/etc/localtime:ro"
+    deploy:
+      placement:
+        constraints: [node.role == worker]
+#  emby:
+#    image: emby/embyserver:latest
+#    restart: unless-stopped
+#    environment:
+#      TZ: "${LAB_TZ:-America/Los_Angeles}"
+#      PUID: "1001"
+#      PGID: "0"
+#      VERSION: latest
+#    ports:
+#      - "8096:8096/tcp"
+#    volumes:
+#      - "${LAB_STORAGE:?err}/config/emby:/config"
+#      - "${LAB_STORAGE:?err}/plex/tv:/data/tvshows"
+#      - "${LAB_STORAGE:?err}/plex/movies:/data/movies"
+#      - "${LAB_STORAGE:?err}/plex/music:/data/music"
+#    deploy:
+#      placement:
+#        constraints: [node.role == worker]
+        #  emby_ob:
+        #    image: emby/embyserver:latest
+        #    restart: unless-stopped
+        #    environment:
+        #      TZ: "${LAB_TZ:-America/Los_Angeles}"
+        #      PUID: "1001"
+        #      PGID: "0"
+        #      VERSION: latest
+        #    ports:
+        #      - "8096:8096/tcp"
+        #    volumes:
+        #      - "${LAB_STORAGE:?err}/config/emby:/config"
+        #      - "${LAB_STORAGE:?err}/download/misc/tob:/mnt/share1"
+        #    deploy:
+        #      placement:
+        #        constraints: [node.role == worker]
+  # letsencrypt-nginx:
+  #   image: nginx:latest
+  #   ports:
+  #     - "85:80"
+  #   volumes:
+  #     - "${LAB_STORAGE:?err}/config/certbot/nginx.conf:/etc/nginx/conf.d/default.conf"
+  #     - "${LAB_STORAGE:?err}/config/certbot/letsencrypt-site:/usr/share/nginx/html"
+   # networks:
+   #   - certbot-network
+  # nginx:
+  #   image: nginx:latest
+  #   ports:
+  #     - "88:80"
+  #     - "443:443"
+  #   volumes:
+  #     - "${LAB_STORAGE:?err}/config/nginx/main.conf:/etc/nginx/conf.d/default.conf"
+  #     - "${LAB_STORAGE:?err}/config/nginx/main-site:/usr/share/nginx/html"
+  #     - "${LAB_STORAGE:?err}/config/nginx/dh-param/dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem"
+  #     - "${LAB_STORAGE:?err}/config/certbot/etc/letsencrypt/live/sea.r6t.io/fullchain.pem:/etc/letsencrypt/live/sea.r6t.io/fullchain.pem"
+  #     - "${LAB_STORAGE:?err}/config/certbot/etc/letsencrypt/live/sea.r6t.io/privkey.pem:/etc/letsencrypt/live/sea.r6t.io/privkey.pem"
+   # networks:
+   #   - certbot-network
   openvpn:
     image: kylemanna/openvpn:latest
     restart: unless-stopped
@@ -34,6 +98,9 @@ services:
       - "NET_ADMIN"
     volumes:
       - "${LAB_STORAGE:?err}/config/openvpn:/etc/openvpn"
+    deploy:
+      placement:
+        constraints: [node.role == manager]
   pihole:
     image: pihole/pihole:latest
     ports:
@@ -51,20 +118,33 @@ services:
     volumes:
       - "${LAB_STORAGE:?err}/config/pihole:/etc/pihole"
       - "${LAB_STORAGE:?err}/config/pihole/pihole_dnsmasq:/etc/dnsmasq.d"
-  plex:
-    image: linuxserver/plex:latest
-    restart: unless-stopped
-    environment:
-      TZ: "${LAB_TZ:-America/Los_Angeles}"
-      PUID: "1001"
-      PGID: "0"
-      VERSION: latest
-    network_mode: "host"
-    volumes:
-      - "${LAB_STORAGE:?err}/config/plex:/config"
-      - "${LAB_STORAGE:?err}/plex/tv:/data/tvshows"
-      - "${LAB_STORAGE:?err}/plex/movies:/data/movies"
-      - "${LAB_STORAGE:?err}/plex/music:/data/music"
+    deploy:
+      placement:
+        constraints: [node.role == manager]
+        #  plex:
+        #    image: linuxserver/plex:latest
+        #    restart: unless-stopped
+        #    environment:
+        #      TZ: "${LAB_TZ:-America/Los_Angeles}"
+        #      PUID: "1001"
+        #      PGID: "0"
+        #      VERSION: latest
+        #    network_mode: "host"
+        #    # ports:
+        #    #   - "32400:32400"
+        #    #   - "32400:32400/udp"
+        #    #   - "32469:32469"
+        #    #   - "32469:32469/udp"
+        #    #   - "5353:5353/udp"
+        #    #   - "1900:1900/udp"
+        #    volumes:
+        #      - "${LAB_STORAGE:?err}/config/plex:/config"
+        #      - "${LAB_STORAGE:?err}/plex/tv:/data/tvshows"
+        #      - "${LAB_STORAGE:?err}/plex/movies:/data/movies"
+        #      - "${LAB_STORAGE:?err}/plex/music:/data/music"
+        #    deploy:
+        #      placement:
+        #        constraints: [node.role == worker]
   radarr:
     depends_on:
       - sabnzbd
@@ -80,12 +160,15 @@ services:
       - "${LAB_STORAGE:?err}/config/radarr:/config"
       - "${LAB_STORAGE:?err}/plex/movies:/movies"
       - "${LAB_STORAGE:?err}/download/sabnzbd/complete/movies:/downloads"
+    deploy:
+      placement:
+        constraints: [node.role == worker]
   sabnzbd:
     image: linuxserver/sabnzbd:latest
     restart: unless-stopped
     environment:
       TZ: "${LAB_TZ:-America/Los_Angeles}"
-      PUID: "1001"
+      PUID: "0"
       PGID: "0"
     ports:
       - "8081:8080"
@@ -94,6 +177,9 @@ services:
       - "${LAB_STORAGE:?err}/config/sabnzbd:/config"
       - "${LAB_STORAGE:?err}/download/sabnzbd/complete:/downloads"
       - "${LAB_STORAGE:?err}/download/sabnzbd/downloading:/incomplete-downloads"
+    deploy:
+      placement:
+        constraints: [node.role == worker]
   sonarr:
     depends_on:
       - sabnzbd
@@ -109,10 +195,38 @@ services:
       - "${LAB_STORAGE:?err}/config/sonarr:/config"
       - "${LAB_STORAGE:?err}/plex/tv:/tv"
       - "${LAB_STORAGE:?err}/download/sabnzbd/complete:/downloads"
+    deploy:
+      placement:
+        constraints: [node.role == worker]
+  syncthing:
+    image: linuxserver/syncthing:latest
+    restart: unless-stopped
+    environment:
+      TZ: "${LAB_TZ:-America/Los_Angeles}"
+      PUID: "1001"
+      PGID: "0"
+    ports:
+      - "8384:8384"
+      - "22000:22000"
+      - "21027:21027/udp"
+    volumes:
+      - "${LAB_STORAGE:?err}/config/syncthing:/config"
+      - "${LAB_STORAGE:?err}/misc/syncthing:/data"
   unifi-video:
     image: pducharme/unifi-video-controller:latest
     restart: unless-stopped
-    network_mode: "host"
+    # network_mode: "host"
+    ports:
+      - "10001:10001"
+      - "1935:1935"
+      - "6666:6666"
+      - "7080:7080"
+      - "7442:7442"
+      - "7443:7443"
+      - "7444:7444"
+      - "7445:7445"
+      - "7446:7446"
+      - "7447:7447"
     environment:
       TZ: "${LAB_TZ:-America/Los_Angeles}"
       PUID: "1001"
@@ -125,3 +239,9 @@ services:
       - apparmor:unconfined
     volumes:
       - "${LAB_STORAGE:?err}/config/unifi-video:/var/lib/unifi-video"
+    deploy:
+      placement:
+        constraints: [node.role == worker]
+  #networks:
+  #  certbot-network:
+  #    driver: bridge
